fix: pipeline bugs and add aesthetic filter script
- Fix CLIP encode_image for transformers 5.0 compatibility
- Fix VerificationAgent relative import error (use absolute import)
- Fix Qwen-Image-Edit OOM: use sequential CPU offload for 24GB GPU
- Fix Pydantic v2 discriminated union (Literal types for source fields)
- Fix CLIP index build script import path and JSON parsing
- Add aesthetic filter script (03_aesthetic_filter.py)
- Full E2E pipeline verified: Korea 685 records, 684 CLIP vectors

--- a/data/clip_index/korea/clip_config.json
+++ b/data/clip_index/korea/clip_config.json
@@ -2,16 +2,8 @@
   "country": "korea",
   "model": "openai/clip-vit-base-patch32",
   "dimension": 512,
-  "num_images": 328,
+  "num_images": 684,
   "categories": [
-    "architecture",
-    "arts",
-    "food",
-    "traditional_clothing",
-    "people",
-    "uncategorized",
-    "nature",
-    "urban",
-    "festivals"
+    "general"
   ]
 }
